// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AccordionItem> Should render correctly 1`] = `
<li>
  <a
    className="uk-accordion-title"
    role="button"
  >
    Title
  </a>
  <div
    className="uk-accordion-content"
  >
    Hello
  </div>
</li>
`;

exports[`<AccordionItem> Should render correctly 2`] = `
<li>
  <a
    className="uk-accordion-title"
    role="button"
  >
    Title
  </a>
  <div
    className="uk-accordion-content"
  >
    <span>
      Test
    </span>
  </div>
</li>
`;

exports[`<AccordionItem> Should render correctly 3`] = `
<li>
  <a
    className="uk-accordion-title"
    role="button"
  >
    Title
  </a>
  <div
    className="uk-accordion-content"
  >
    <span>
      Hello
    </span>
  </div>
</li>
`;
